tests/toylang/neg/000821_mutation.toylang
program a = { a = var a : bool 0; } .
